@@ -1,3 +1,9 @@
+2007-08-10  Inge Wallin  <inge@lysator.liu.se>
+
+	Cleaning
+	* src/lib/placemarkpainter.cpp: Change fontWidth into textWidth,
+	because that's what it is.
+
 2007-08-10  Torsten Rahn  <rahn@kde.org>
 	
 	Tooltips for Mapthemes ...
@@ -73,6 +79,7 @@
 	(rectangularPaintPlaceFolder): use new methods
 
 2007-08-10  Torsten Rahn  <rahn@kde.org>
+
 	Fixing issue reported by Luis Silva by making sure 
 	that the preview images match the expected size:
 
